# AnSoGicScroll

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ad21dde  INSTALL_APT.md  LICENSE  README.md  pubkey.gpg
.cache/clangd/index/: AboutDialog.cpp.AF13295C252D8578.idx  AboutDialog.h.3085ECF6A18D42D2.idx  CaptureOverlay.cpp.A85EE335885E4D57.idx  CaptureOverlay.h.7D8B1ED0E57EA7D3.idx  IconFactory.cpp.D8FB360993A8B1E1.idx  IconFactory.h.25BB2F36DD2C2431.idx  ImageStitcher.cpp.854158BD8D36823F.idx  ImageStitcher.h.057A8EBFA1132E16.idx  ScreenGrabber.cpp.0749A2422D9B5707.idx  ScreenGrabber.h.B0D45CA7D6C08C5B.idx  ScreenshotManager.cpp.FC46148CF75FA812.idx  ScreenshotManager.h.7B9B36B24CF5DF10.idx  ScrollCaptureManager.cpp.ECCC759F6D54417B.idx  ScrollCaptureManager.h.7AED994D58A9E508.idx  ScrollCaptureToolbar.cpp.20E62450DD74B146.idx  ScrollCaptureToolbar.h.C56A815743B1AD1B.idx  TrayApplication.cpp.95E9BC31ED58922A.idx  TrayApplication.h.D5ADC63143AE6401.idx  main.cpp.F5A9362983946984.idx
.claude/: settings.json
.github/workflows/: build.yml
dists/jammy/: InRelease  Release  Release.gpg
dists/stable/: InRelease  Release  Release.gpg
resources/linux/: ansogicscroll.desktop  ansogicscroll.repo
resources/macos/: Info.plist.in
resources/windows/: app.rc.in
rpm/: AnSoGicScroll-0.1.0-Linux.rpm
rpm/41/: AnSoGicScroll-0.1.0-Linux.rpm
rpm/41/repodata/: 0093294288022202bbac46e28aff423faa645b2da81e8a013e869042175e0268-other.sqlite.bz2  03fd4264a4994e9ce4e991f0e28ef1b80d4e58325a926d801aaf0fa9f7896a62-other.sqlite.bz2  150c8055bf691c0f4890c80e805c06340aa5b97f3e241d56c47546e2b41184e1-primary.sqlite.bz2  1bd034307f01984b0844ea082f58ffc84c7abebdd3812ff9adbc534e46d00bf8-filelists.sqlite.bz2  1f20bdcb921b41d364ede1f5083527d7fb12b048fa0f1070c90a004f4254b282-primary.sqlite.bz2  1ffabedcb3ace83d841216d8394c6f1e91ee274694299e298a9cf596e313f2fa-filelists.sqlite.bz2  2f6667c38cb52f16e710426a6101461b33696529f9aa33ca951fcbbd2c148426-primary.sqlite.bz2  39946ab5aeb95e5a3d6f272a791fbe269181f0d42bb6b53022eb3f83000cac95-filelists.sqlite.bz2  40559c1f085d9492fa144a856b5ef119298347de456e5ea49f6c5d9a6ecb85bc-primary.sqlite.bz2  42b85d4eaff907c8615d3ba34b475dce39d6895beb6bd08a9a8466acec20502b-other.sqlite.bz2  4bafa4b223d7a5e5f56d55ae3014b4ad24d18aa1f30da358e64202a0de859d65-filelists.sqlite.bz2  4f1ae2f468d044aca947617c16681f069363979b7fb49c31012dc52ab79f4295-primary.sqlite.bz2  5b2cd184304d2d8afe8de4e95284383c781ec00c83a39c1693ff065622b2b773-filelists.sqlite.bz2  69ced416c008fd651f0f08fa10d44d257043f312460383f87f4ee9472de0c18d-filelists.sqlite.bz2  84b923de79ea49e23d50fafd3b8497a776002d9dd72b20fe4894f829f45c2f6c-other.sqlite.bz2  8bfebec9b6597a89ee01622c7349a9f587ddcd4903e2af6794108135e53f1682-filelists.sqlite.bz2  9488b231224c4fed7dbc23a834de913fe371bc02abe2388561b24444c268e59f-other.sqlite.bz2  95b012060edf49924de6b2666b186e51227511216d2ab94fd79ac500353ce126-primary.sqlite.bz2  a3213ce388c7cbc75a0ddbe7e6710e8c051a916ef1d11dc9fc7d15844505d68b-filelists.sqlite.bz2  b0a82ac60c6a2096b7b9011706651f8710851b393ae880efd5ca394703bea2c8-filelists.sqlite.bz2  bc2bf48bd526583acb26d80aa984bc3c39b16a2b57d37d0a934e0fe17619e6f2-primary.sqlite.bz2  c03d15600e9fc3f07af31dfa438fb5c2f619712e9472a8f4e3b3f4b3ade4a291-primary.sqlite.bz2  d71740c42f5be4278c44b790bb50005697e3ec3228b16aa5b571af00ee5493d4-other.sqlite.bz2  da8f09f04707c63584c05965d6c5665d3c33bfac13496fb30aa89ffcb97f3d44-primary.sqlite.bz2  db41e761f737416115d13359d83fbd7a1b72a3384edbd1fcbd64bbce19323675-other.sqlite.bz2  db48d425247e02d10b792e3b40ec7ca3c29288e4356d89b23d018a0ccae676aa-filelists.sqlite.bz2  dfdc5487a0471f6cf4a15ec98ee68404a20c04d6a721691ad79c26663ec4ba18-primary.sqlite.bz2  e09dd8f1d54c24dfd18279eb071d366dbc98498c8a57a7716b088fe023a5a7ab-other.sqlite.bz2  e57f2a63d81ce78c2508ea4a7413c7d07fd6a959b6fc24dee18418b13b89bd72-primary.sqlite.bz2  ef9f977fbbc60bda4782af903b4aef36a085d5f17cba1b695ce9d59937847336-other.sqlite.bz2  f6de9905e6b6569ec7a491d7db65c1c5e53336876d811ca9b7e1e5dc10fe8433-filelists.sqlite.bz2  f9d8f69c64fcf14f6d31428210b3522fe91a097f99fc8f9f46dabea8cca6526c-other.sqlite.bz2  fcc11c45ee85b07788b4bb144eb22f65c1b1f03cadb82f7f4fc6ed686b096b83-other.sqlite.bz2  repomd.xml  repomd.xml.asc
rpm/42/: AnSoGicScroll-0.1.0-Linux.rpm
rpm/42/repodata/: 1067a348b984b6d1864e867fe233ae69514a8625f480689d44c4fbe587f91204-other.sqlite.bz2  1897d52e2779220aadfe53ac36c6be746e7b9e3718de19fb47ec8bec288e6a26-primary.sqlite.bz2  18a00ba7c92ee619973ab33f3d33de7f417589aabe070c434cee2e9774c377cb-filelists.sqlite.bz2  1b055f9a1860420ba83c10c5fda99bb52714cd4b748467c9a7d32348a0554492-filelists.sqlite.bz2  21745ccc719fe9acddadd09c91c2965d5b854087b79dcd09977f0921e32f2c71-filelists.sqlite.bz2  2be1d9d3307253a66899307698df30292682265524f637c4362eb9b61ed40525-primary.sqlite.bz2  345283ef6239a3b4e1e530f7d974abe7988bba9fa1aecb9b2f3d0f12fdf1c7eb-other.sqlite.bz2  36d818f7cb756055702f1bd81cbd5203917966104cdba286c939d27d8d18d769-primary.sqlite.bz2  38cd840908c8dc76178384a25a2f017d14d15819e68f8c2578ced405720e17c6-primary.sqlite.bz2  repomd.xml  (+25 more)
rpm/repodata/: 2df0a66902d2d3b81342ee839ae62c2c53ad2c4250b524dee574e6d0d25c62a2-primary.sqlite.bz2  7ae74bd3821425161fec2550e521f961ccaf915690e3f8c1b3199e8ac123fe92-other.sqlite.bz2  7de38d698af61e122706086a818e354ed675b39b8487ed385072be9ed33124ec-filelists.sqlite.bz2  repomd.xml  repomd.xml.asc
scripts/: publish-apt-repo.sh  publish-rpm-repo.sh
scripts/packaging/: postinst  postrm
src/: AboutDialog.cpp  AboutDialog.h  CaptureOverlay.cpp  CaptureOverlay.h  IconFactory.cpp  IconFactory.h  ImageStitcher.cpp  ImageStitcher.h  ScreenGrabber.cpp  ScreenGrabber.h  ScreenshotManager.cpp  ScreenshotManager.h  ScrollCaptureManager.cpp  ScrollCaptureManager.h  ScrollCaptureToolbar.cpp  ScrollCaptureToolbar.h  TrayApplication.cpp  TrayApplication.h  capturescreenscroll.cpp  capturescreenscroll.h  main.cpp  portalrequesthelper.cpp  portalrequesthelper.h  scrollregionselector.cpp  uinputscrollcontroller.cpp  waylandportalcapturebackend.cpp  waylandportalcapturebackend.h  windowhighlightoverlay.cpp  windowhighlightoverlay.h
(+5 files in other folders)
